# cityjobs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
_archive/: package.json  tsconfig.json
_archive/migrations/: 0001_init.sql
_archive/src/: index.ts  process.ts  types.ts
_archive/src/lib/: socrata.ts
functions/: deploy.sh  fetch.py  main.py  models.py  process.py  pyproject.toml  requirements.txt
functions/sql/: transform.sql
migrations/: 0001_init.sql
scripts/: migrate-filenames.sh  setup-wif.sh  trigger.sh
src/: fetch.ts  index.ts
src/lib/: transform.ts
web/: deploy.sh  index.html  package-lock.json  package.json  vite.config.ts
web/src/: db.test.ts  db.ts  main.ts  router.ts  style.css
web/src/views/: console.ts  faq.ts  job-detail.ts  jobs.ts  resources.ts
