[project]
name = "cityjobs"
version = "0.1.0"
description = "NYC Jobs data pipeline - GCP Cloud Function"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-secret-manager>=2.0.0",
    "requests>=2.0.0",
    "duckdb>=1.4.3",
    "pandas>=2.3.3",
    "mashumaro>=3.17",
]

[project.optional-dependencies]
dev = ["python-dotenv>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["functions"]

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.31.0",
    "ipython>=9.9.0",
    "pre-commit>=4.0.0",
    "black>=25.0.0",
    "shandy-sqlfmt>=0.26.0",
    "dotenv>=0.9.9",
]
