[project]
name = "cityjobs-functions"
version = "0.1.0"
description = "NYC Jobs data pipeline - GCP Cloud Function"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-secret-manager>=2.0.0",
    "requests>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

# Add your own dependencies below, e.g.:
# processing = [
#     "duckdb>=0.9.0",
#     "pyarrow>=14.0.0",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
